# lottery

./: .env.example  .gitignore  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.uni.yml  docker-compose.yml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/ailottery_agent/: __init__.py  __main__.py
alien-monitor/: .dockerignore  .gitignore  CONTRIBUTORS.md  Dockerfile  README.md  SECURITY.md  docker-compose.prod.yml  start.sh
alien-monitor/backend/: ai_assistant.py  ai_nav_actions.py  argus_feed.py  argus_layers.py  argus_status.py  chain_metrics.py  chain_net.py  dioscuri_layers.py  dioscuri_status.py  ecosystem_layout.py  ecosystem_registry.py  factory_products.py  gaia_layers.py  gaia_status.py  helios_layers.py  helios_status.py  hub_discovery.py  live_lottery_feed.py  lottery_layers.py  main.py  (+17 more)
config/: economics.yaml  sponsor.yaml
contracts/: Dockerfile  docker-deploy.sh  foundry.docker.toml
docs/: AUDIT.md  README.md  deployments-base.md
frontend/: index.html  serve.mjs
relayer/: Dockerfile  pyproject.toml
relayer/ailottery_relayer/: __init__.py  __main__.py  abi.py  chain.py  config.py  economy.py  economy_draw.py  economy_snapshot.py  log.py  mesh.py  monitor.py  oracles.py  roster.py  server.py  sponsor.py  treasurer.py  vdf.py
relayer/tests/: test_chain_onchain_vdf.py  test_economy_draw.py  test_economy_snapshot.py  test_mesh_roster.py  test_monitor_contract.py  test_sponsor_binding.py  test_voucher.py  test_wallet_seed_guard.py
scripts/: ci_lottery_coverage_badge.sh
(+95 files in other folders)
